--- a/index.qmd
+++ b/index.qmd
@@ -20,40 +20,43 @@ advdate <- function(day, week) {
 }
 ```
 
-This page displays an outline of the topics, content, and assignments for the semester. Links, to slides, assignments and course resources will go live as the semester progresses. ***All assignments must be submitted by 11:59 p.m. on the due date***.
+This page displays an outline of the topics, content, and assignments
+for the semester. Links, to slides, assignments and course resources
+will go live as the semester progresses. ***All assignments must be
+submitted by 11:59 p.m. on the due date***.
 
 ::: column-screen-inset-right
-| Week | Date                | Topic                          |                                                                               Reading                                                                               |                                                     Video                                                      |                         Slides                         |                           Assignment                            |        Due Date         |
+| Week | Date                | Topic                          |                                                                               Reading                                                                               |                                                     Video                                                      |                   Slides                    |                           Assignment                            |        Due Date         |
 |:-------:|---------|---------|:-------:|:-------:|:-------:|:-------:|:-------:|
-|  1   | `r advdate(mon,0)`  | Welcome to DATS 1001           | [📖](https://rstudio-education.github.io/hopr/starting.html "hopwr, Appendix A and B") [📖](https://quarto.org/docs/get-started/hello/rstudio.html "Hello, Quarto") |                     [📺](https://youtu.be/eimM6pNkYjE) [📺](https://youtu.be/6QN9ZYURDFg)                      |                                                        |                                                                 |                         |
-|      | `r advdate(wed,0)`  | Meet ouR tech stack            |                                                [📖](https://www.markdownguide.org/getting-started/ "Markdown Guide")                                                |                               [📺](https://www.youtube.com/watch?v=bTVIMt3XllM)                                |      [🖥️](slides/week-1.2.qmd "Week 1.2 slides")       |                                                                 |                         |
-|  2   | `r advdate(mon,1)`  | 🇺🇸 No class, Labor Day         |                                                                                                                                                                     |                                                                                                                |                                                        |                                                                 |                         |
-|      | `r advdate(wed,1)`  | R coding basics                |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      |    [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy)    |      [🖥️](slides/week-2.1.qmd "Week 2.1 slides")       |                                                                 |                         |
-|  3   | `r advdate(mon,2)`  | Grammar of graphics            |                         [📖](https://r4ds.hadley.nz/data-import "r4ds, chap. 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")                         |  [📺](https://youtu.be/QG1oDJPoIio "Make a bar chart") [📺](https://youtu.be/-1YhCql-gMo "Make a histogram")   |      [🖥️](slides/week-3.1.qmd "Week 3.1 slides")       |                                                                 |                         |
-|      | `r advdate(wed,2)`  | Which visualization do I use?  |                                                      [📖](https://r4ds.hadley.nz/layers.html "r4ds, 9.1-9.4")                                                       | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") |      [🖥️](slides/week-3.2.qmd "Week 3.2 slides")       |                                                                 |                         |
-|  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                     [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11")                                                     |                                                       📺                                                       |      [🖥️](slides/week-4.1.qmd "Week 4.1 slides")       |                                                                 |                         |
-|      | `r advdate(wed,3)`  | Coding assignment 1            |                                             [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")                                              |                                                                                                                |                                                        | [🧮](assignments/coding-assignment-1.qmd "Coding assignment 1") |   `r advdate(sun,4)`    |
-|  5   | `r advdate(mon,4)`  | What is tidy data?             |                                               [📖](https://r4ds.hadley.nz/data-tidy#sec-tidy-data "r4ds, chap. 5.2")                                                |                  [📺](https://youtu.be/ZwJsSjJRuMU?si=A6ucJ7jHL1s3T3uT "Reading data into R")                  |      [🖥️](slides/week-5.1.qmd "Week 5.1 slides")       |                                                                 |                         |
-|      | `r advdate(wed,4)`  | Working with data              |                                                  [📖](https://r4ds.hadley.nz/data-transform "rd4s, chap. 3.1-3.4")                                                  |           [📺](https://youtu.be/ScQD47eJeAE?si=Rc6epCTKhQVtkCjS "Transforming data w/ dplyr verbs")            |        [🖥️](slides/week-5.2 "Week 5.2 slides")         |                                                                 |                         |
-|  6   | `r advdate(mon,5)`  | Grammar of data wrangling      |                                                [📖](https://r4ds.hadley.nz/data-transform#groups "r4ds, chap. 3.5")                                                 |             [📺](https://youtu.be/mgBwVzMV-v8?si=4KP-qyDyssI92iFe "Grouping and summarizing data")             |        [🖥️](slides/week-6.1 "Week 6.1 slides")         |                                                                 |                         |
-|      | `r advdate(wed,5)`  | Joining data frames            |                                                      [📖](https://r4ds.hadley.nz/joins.html "r4ds, chap. 19")                                                       |          [📺](https://youtu.be/wNF3ZPneHWw?si=TyiXrsAxgbdrztD4 "Merge data frames with left_join()")           |      [🖥️](slides/week-6.2.qmd "Week 6.2 slides")       |                                                                 |                         |
-|  7   | `r advdate(mon,6)`  | Tidying data                   |                                                    [📖](https://r4ds.hadley.nz/data-tidy "r4ds, chap. 5.3-5.5")                                                     |                     [📺](https://youtu.be/xa0tYCfHHTI?si=1YII-L90IY05UZ70 "Tidying data")                      |       [🖥️](slides/week-7.1.qmd "Week 7 slides")        |                                                                 |                         |
-|      | `r advdate(wed,6)`  | Coding assignment 2            |                                            [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")                                             |                                                                                                                |                                                        | [🧮](assignments/coding-assignment-2.qmd "Coding assingment 2") |   `r advdate(sun,7)`    |
-|  8   | `r advdate(mon,7)`  | The language of models         |                                                                                                                                                                     |                                                                                                                |      [🖥️](slides/week-8.1.qmd "Week 8.1 slides")       |                                                                 |                         |
-|      | `r advdate(wed,7)`  | Linear regression              |                                                  [📖](https://openintro-ims.netlify.app/model-slr "IMS, chap. 7")                                                   |                             [📺](https://youtu.be/dLc-lfEEYss?si=-Zelb-HBAP-MPvnF)                             |      [🖥️](slides/week-8.2.qmd "Week 8.2 slides")       |  [✍️](project/project-assignment-1.qmd "Project assignment 1")  |   `r advdate(sun,8)`    |
-|  9   | `r advdate(mon,8)`  | Multiple regression            |                                                  [📖](https://openintro-ims.netlify.app/model-mlr "IMS, chap. 8")                                                   |                             [📺](https://youtu.be/jXg0vU0y1ak?si=rhQ9uWhuhVqnI-Ox)                             |        [🖥️](slides/week-9.1.qmd "Week 9 sides")        |                                                                 |                         |
-|      | `r advdate(wed,8)`  | Logistic regression            |                                                [📖](https://openintro-ims.netlify.app/model-logistic "IMS, chap. 9")                                                |                                                       📺                                                       | [🖥️](https://youtu.be/xuTiAW0OR40?si=sUoIr5pzHwHEpazO) |                                                                 |                         |
-|  10  | `r advdate(mon,9)`  | Predictive modeling            |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                                                                 |                         |
-|      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                           🖥️                           |                               🧮                                |   `r advdate(sun,10)`   |
-|  11  | `r advdate(mon,10)` | Research design                |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                                                                 |                         |
-|      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                               ✍️                                |   `r advdate(sun,11)`   |
-|  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                                                                 |                         |
-|      | `r advdate(wed,11)` | Hypothesis testing 1           |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                                                                 |                         |
-|  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                                                                 |                         |
-|      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                           🖥️                           |                               🧮                                |   `r advdate(sun,13)`   |
-|  14  | `r advdate(mon,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                                        |                                                                 |                         |
-|      | `r advdate(wed,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                                        |                                                                 |                         |
-|  15  | `r advdate(mon,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                                        |                                                                 |                         |
-|      | `r advdate(wed,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                                        |                                                                 |                         |
-|  16  | `r advdate(mon,15)` | Wrap-up: DS careers            |                                                                                                                                                                     |                                                                                                                |                                                        |                               ✍️                                | Date of scheduled final |
+|  1   | `r advdate(mon,0)`  | Welcome to DATS 1001           | [📖](https://rstudio-education.github.io/hopr/starting.html "hopwr, Appendix A and B") [📖](https://quarto.org/docs/get-started/hello/rstudio.html "Hello, Quarto") |                     [📺](https://youtu.be/eimM6pNkYjE) [📺](https://youtu.be/6QN9ZYURDFg)                      |                                             |                                                                 |                         |
+|      | `r advdate(wed,0)`  | Meet ouR tech stack            |                                                [📖](https://www.markdownguide.org/getting-started/ "Markdown Guide")                                                |                               [📺](https://www.youtube.com/watch?v=bTVIMt3XllM)                                | [🖥️](slides/week-1.2.qmd "Week 1.2 slides") |                                                                 |                         |
+|  2   | `r advdate(mon,1)`  | 🇺🇸 No class, Labor Day         |                                                                                                                                                                     |                                                                                                                |                                             |                                                                 |                         |
+|      | `r advdate(wed,1)`  | R coding basics                |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      |    [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy)    | [🖥️](slides/week-2.1.qmd "Week 2.1 slides") |                                                                 |                         |
+|  3   | `r advdate(mon,2)`  | Grammar of graphics            |                         [📖](https://r4ds.hadley.nz/data-import "r4ds, chap. 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2")                         |  [📺](https://youtu.be/QG1oDJPoIio "Make a bar chart") [📺](https://youtu.be/-1YhCql-gMo "Make a histogram")   | [🖥️](slides/week-3.1.qmd "Week 3.1 slides") |                                                                 |                         |
+|      | `r advdate(wed,2)`  | Which visualization do I use?  |                                                      [📖](https://r4ds.hadley.nz/layers.html "r4ds, 9.1-9.4")                                                       | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") | [🖥️](slides/week-3.2.qmd "Week 3.2 slides") |                                                                 |                         |
+|  4   | `r advdate(mon,3)`  | Visualization best practices   |                                                     [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11")                                                     |                                                       📺                                                       | [🖥️](slides/week-4.1.qmd "Week 4.1 slides") |                                                                 |                         |
+|      | `r advdate(wed,3)`  | Coding assignment 1            |                                             [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")                                              |                                                                                                                |                                             | [🧮](assignments/coding-assignment-1.qmd "Coding assignment 1") |   `r advdate(sun,4)`    |
+|  5   | `r advdate(mon,4)`  | What is tidy data?             |                                               [📖](https://r4ds.hadley.nz/data-tidy#sec-tidy-data "r4ds, chap. 5.2")                                                |                  [📺](https://youtu.be/ZwJsSjJRuMU?si=A6ucJ7jHL1s3T3uT "Reading data into R")                  | [🖥️](slides/week-5.1.qmd "Week 5.1 slides") |                                                                 |                         |
+|      | `r advdate(wed,4)`  | Working with data              |                                                  [📖](https://r4ds.hadley.nz/data-transform "rd4s, chap. 3.1-3.4")                                                  |           [📺](https://youtu.be/ScQD47eJeAE?si=Rc6epCTKhQVtkCjS "Transforming data w/ dplyr verbs")            |   [🖥️](slides/week-5.2 "Week 5.2 slides")   |                                                                 |                         |
+|  6   | `r advdate(mon,5)`  | Grammar of data wrangling      |                                                [📖](https://r4ds.hadley.nz/data-transform#groups "r4ds, chap. 3.5")                                                 |             [📺](https://youtu.be/mgBwVzMV-v8?si=4KP-qyDyssI92iFe "Grouping and summarizing data")             |   [🖥️](slides/week-6.1 "Week 6.1 slides")   |                                                                 |                         |
+|      | `r advdate(wed,5)`  | Joining data frames            |                                                      [📖](https://r4ds.hadley.nz/joins.html "r4ds, chap. 19")                                                       |          [📺](https://youtu.be/wNF3ZPneHWw?si=TyiXrsAxgbdrztD4 "Merge data frames with left_join()")           | [🖥️](slides/week-6.2.qmd "Week 6.2 slides") |                                                                 |                         |
+|  7   | `r advdate(mon,6)`  | Tidying data                   |                                                    [📖](https://r4ds.hadley.nz/data-tidy "r4ds, chap. 5.3-5.5")                                                     |                     [📺](https://youtu.be/xa0tYCfHHTI?si=1YII-L90IY05UZ70 "Tidying data")                      |  [🖥️](slides/week-7.1.qmd "Week 7 slides")  |                                                                 |                         |
+|      | `r advdate(wed,6)`  | Coding assignment 2            |                                            [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")                                             |                                                                                                                |                                             | [🧮](assignments/coding-assignment-2.qmd "Coding assingment 2") |   `r advdate(sun,7)`    |
+|  8   | `r advdate(mon,7)`  | The language of models         |                                                                                                                                                                     |                                                                                                                | [🖥️](slides/week-8.1.qmd "Week 8.1 slides") |                                                                 |                         |
+|      | `r advdate(wed,7)`  | Linear regression              |                                                  [📖](https://openintro-ims.netlify.app/model-slr "IMS, chap. 7")                                                   |                             [📺](https://youtu.be/dLc-lfEEYss?si=-Zelb-HBAP-MPvnF)                             | [🖥️](slides/week-8.2.qmd "Week 8.2 slides") |  [✍️](project/project-assignment-1.qmd "Project assignment 1")  |   `r advdate(sun,8)`    |
+|  9   | `r advdate(mon,8)`  | Multiple regression            |                                                  [📖](https://openintro-ims.netlify.app/model-mlr "IMS, chap. 8")                                                   |                             [📺](https://youtu.be/jXg0vU0y1ak?si=rhQ9uWhuhVqnI-Ox)                             |  [🖥️](slides/week-9.1.qmd "Week 9 sides")   |                                                                 |                         |
+|      | `r advdate(wed,8)`  | Logistic regression            |                                                [📖](https://openintro-ims.netlify.app/model-logistic "IMS, chap. 9")                                                |                             [📺](https://youtu.be/xuTiAW0OR40?si=sUoIr5pzHwHEpazO)                             | [🖥️](slides/week-9.2.qmd "Week 9.2 slides") |                                                                 |                         |
+|  10  | `r advdate(mon,9)`  | Predictive modeling            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      |                               🧮                                |   `r advdate(sun,10)`   |
+|  11  | `r advdate(mon,10)` | Research design                |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                               ✍️                                |   `r advdate(sun,11)`   |
+|  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|      | `r advdate(wed,11)` | Hypothesis testing 1           |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
+|      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                               🧮                                |   `r advdate(sun,13)`   |
+|  14  | `r advdate(mon,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                             |                                                                 |                         |
+|      | `r advdate(wed,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                             |                                                                 |                         |
+|  15  | `r advdate(mon,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                             |                                                                 |                         |
+|      | `r advdate(wed,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                             |                                                                 |                         |
+|  16  | `r advdate(mon,15)` | Wrap-up: DS careers            |                                                                                                                                                                     |                                                                                                                |                                             |                               ✍️                                | Date of scheduled final |
 :::
