--- a/index.qmd
+++ b/index.qmd
@@ -47,7 +47,7 @@ submitted by 11:59 p.m. on the due date***.
 |  9   | `r advdate(mon,8)`  | Multiple regression            |                                                  [📖](https://openintro-ims.netlify.app/model-mlr "IMS, chap. 8")                                                   |                             [📺](https://youtu.be/jXg0vU0y1ak?si=rhQ9uWhuhVqnI-Ox)                             |  [🖥️](slides/week-9.1.qmd "Week 9 sides")   |                                                                 |                         |
 |      | `r advdate(wed,8)`  | Logistic regression            |                                                [📖](https://openintro-ims.netlify.app/model-logistic "IMS, chap. 9")                                                |                             [📺](https://youtu.be/xuTiAW0OR40?si=sUoIr5pzHwHEpazO)                             | [🖥️](slides/week-9.2.qmd "Week 9.2 slides") |                                                                 |                         |
 |  10  | `r advdate(mon,9)`  | Predictive modeling            |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
-|      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      |                               🧮                                |   `r advdate(sun,10)`   |
+|      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                     🖥️                      | [🧮](assignments/coding-assignment-3.qmd "Coding assingment 3") |   `r advdate(sun,10)`   |
 |  11  | `r advdate(mon,10)` | Research design                |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
 |      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                               ✍️                                |   `r advdate(sun,11)`   |
 |  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       |                     🖥️                      |                                                                 |                         |
